@@ -2932,6 +2932,15 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#Define a default LD_LIBRARY_PATH for all systems: https://github.com/Fourdee/DietPi/issues/475#issuecomment-350380744
+		if (( ! $(grep -ci -m1 '^export LD_LIBRARY_PATH=' /etc/bash.bashrc) )); then
+
+			cat << _EOF_ >> /etc/bash.bashrc
+export LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib:/opt/vc/lib
+_EOF_
+
+		fi
+		#-------------------------------------------------------------------------------
 
 	fi
 
