@@ -10,6 +10,7 @@ General | DietPi RPi kernel: Updated to 4.9.62.
 General | DietPi RPi kernel: Will no longer re-install, if the current version is already at latest.
 General | Added farenheit readouts for cpu_info and dietpi-config. For those "over the pond" :D : http://dietpi.com/phpbb/viewtopic.php?f=12&t=2516&p=9772#p9772
 General | Sparky SBC: Kernel update to add support for USB 1.1 DACs, thanks @sudeep. This must be enabled manually, if using a USB 1.1 DAC, as this breaks Allo WiFi dongle. Edit "/DietPi/uEnv.txt" and change the value "aotg.aotg1_speed=1" (from "0"), then reboot.
+General | We now define a default LD_LIBRARY_PATH for all systems, exported from /etc/bash.bashrc: https://github.com/Fourdee/DietPi/issues/475#issuecomment-350380744
 DietPi-Software | First run setup, now logged to /etc/dietpi/logs/dietpi-firstrun-setup.log.
 DietPi-Services | Added support for "mask" and "unmask". "mask" will stop and disable the service and prevent it from running, "unmask" will enable and start the service. EG: "dietpi-services mask cron", will prevent Cron from starting.
 DietPi-Config | WiFi: Now uses the wpa_supplicant.conf method to setup WiFi connections. WEP is no longer supported by DietPi in this mode. WPA-PSK/WPA2-PSK and OPEN hosts supported: https://github.com/Fourdee/DietPi/issues/1262
@@ -41,6 +42,7 @@ DietPi-Software | MPD: Corrected various uninstallation issues.
 DietPi-Software | APT Removal: Resolved an issue in Stretch, where held packages were not being removed: https://github.com/Fourdee/DietPi/issues/475
 DietPi-Software | FFMPEG: Resolved inability to install on XU4 Jessie: https://github.com/Fourdee/DietPi/issues/1273
 DietPi-Software | Chromium (RPi Stretch): Resolved installation + desktop icon symlink: https://github.com/Fourdee/DietPi/issues/475#issuecomment-350111359
+DietPi-Software | AmiBerry (RPi Stretch): Resolved installation failing due to package deps: https://github.com/Fourdee/DietPi/issues/475#issuecomment-350050345
 DietPi-Update | Resolved an issue where .update_available file would still exist in no network situations: https://github.com/Fourdee/DietPi/issues/1258
 Patch_File | Auto swapfile generation no longer run twice (mostly for pre v150 images): https://github.com/Fourdee/DietPi/issues/1257
 
